modernizacion progreso de obra

--- a/Paginas/progresoObra.html
+++ b/Paginas/progresoObra.html
@@ -68,89 +68,107 @@
     <h2 class="text-2xl font-semibold text-gray-800 text-center mb-2">Gestión de Avances de Obra</h2>
     <p class="text-center text-gray-600 mb-6">Desde aquí puedes publicar avances de tus obras, grabados o en vivo.</p>
 
-    <!-- 🧱 Formulario de publicación -->
-    <form id="formVideo" class="flex flex-col gap-6" data-role="admin">
+    <!-- Formulario de publicación -->
+   <form id="formVideo" class="grid grid-cols-1 md:grid-cols-2 gap-8" data-role="admin">
 
-      <!-- Título -->
-      <div>
-        <label class="block font-medium text-gray-800 mb-1">Título del avance</label>
-        <input id="titulo" type="text" placeholder="Ejemplo: Avance de cimientos"
-               class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required>
-      </div>
+  <!-- COLUMNA IZQUIERDA -->
+<div class="flex flex-col gap-2 border border-gray-700 rounded-xl p-5 overflow-hidden">
 
-      <!-- Descripción -->
-      <div>
-        <label class="block font-medium text-gray-800 mb-1">Descripción</label>
-        <textarea id="descripcion" rows="3" placeholder="Describe brevemente el avance..."
-                  class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required></textarea>
-      </div>
+  <!-- Título -->
+  <div>
+    <input id="titulo" type="text" 
+           placeholder="Título del avance (Ej: Avance de cimientos)"
+           class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" 
+           required>
+  </div>
 
-      <!-- ID de YouTube + Enlaces -->
-      <div>
-        <label class="block font-medium text-gray-800 mb-1">ID de YouTube</label>
-        <div class="flex flex-col sm:flex-row gap-2">
-          <input id="youtubeID" type="text" placeholder="Ejemplo: OCMaOMj06aA"
-                 class="flex-1 px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required>
+  <!-- Descripción -->
+  <div>
+    <textarea id="descripcion" rows="4" 
+              placeholder="Descripción del avance..."
+              class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" 
+              required></textarea>
+  </div>
 
-          <button type="button"
-                  onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/videos/upload','_blank')"
-                  class="px-3 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn">
-            🎬 Canal
-          </button>
+  <!-- ID YouTube + Tipo + Botones -->
+<div>
+  <div class="flex flex-col gap-2
+              lg:flex-row lg:items-center lg:gap-2">
 
-          <button type="button"
-                  onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/livestreaming','_blank')"
-                  class="px-3 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 btn">
-            🔴 En Vivo
-          </button>
-        </div>
-        <p class="text-gray-500 text-sm mt-1 text-center sm:text-left">
-          Copia el ID de tu video o inicia una transmisión en vivo.
-        </p>
-      </div>
+    <!-- Input: ID YouTube -->
+    <input id="youtubeID" type="text"
+           placeholder="ID de YouTube"
+           class="flex-1 min-w-[150px] px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e] h-10"
+           required>
 
-      <!-- Vista previa -->
-      <div id="previewContainer" class="flex justify-center mt-4"></div>
+    <!-- Select: Tipo -->
+    <select id="tipo"
+            class="flex-1 min-w-[150px] px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e] h-10">
+      <option value="">Elegir tipo</option>
+      <option value="video">Video grabado</option>
+      <option value="vivo">Transmisión en vivo</option>
+    </select>
 
-      <!-- Estado y Tipo -->
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div>
-          <label class="block font-medium text-gray-800 mb-1">Estado</label>
-          <select id="estado" class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]">
-            <option value="borrador">Borrador</option>
-            <option value="publicado">Publicado</option>
-          </select>
-        </div>
-        <div>
-          <label class="block font-medium text-gray-800 mb-1">Tipo</label>
-          <select id="tipo" class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]">
-            <option value="video">Video grabado</option>
-            <option value="vivo">Transmisión en vivo</option>
-          </select>
-        </div>
-      </div>
+    <!-- BOTONES -->
+    <div class="flex flex-col sm:flex-row gap-2 lg:flex-row">
 
-      <!-- Botones -->
-        <div class="flex justify-center gap-6 mt-4">
-        <button type="button"
-                onclick="formVideo.reset(); previewContainer.innerHTML='';"
-                class="w-32 px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500 btn">
-            Limpiar
-        </button>
+      <!-- Botón Canal -->
+      <button type="button"
+              onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/videos/upload','_blank')"
+              class="px-3 py-2 h-10 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn flex-1">
+        Canal
+      </button>
 
-        <button type="submit"
-                class="w-32 px-4 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn">
-            Publicar
-        </button>
+      <!-- Botón Transmisión -->
+      <button type="button"
+              onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/livestreaming','_blank')"
+              class="px-3 py-2 h-10 bg-red-600 text-white rounded-lg hover:bg-red-700 btn flex-1">
+        Transmisión
+      </button>
 
-        <button type="button"
-                onclick="window.location.href='../Paginas/gestionProyectos.html';"
-                class="w-32 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 btn">
-            Cancelar
-        </button>
-        </div>
+    </div>
 
-    </form>
+  </div>
+
+  <p class="text-gray-500 text-sm mt-2">
+    Copia el ID de tu video o inicia una transmisión en vivo.
+  </p>
+</div>
+  </div>
+
+
+<!-- COLUMNA DERECHA -->
+<div class="flex flex-col gap-6 border border-gray-700 rounded-xl p-5 overflow-hidden">
+
+  <!-- Vista previa -->
+  <div id="previewContainer" class="flex justify-center"></div>
+
+
+ <!-- Botones -->
+ <div class="flex flex-col sm:flex-row justify-center justify-betweenitems-center gap-2">
+
+    <button type="button"
+            onclick="formVideo.reset(); previewContainer.innerHTML='';"
+            class="w-full sm:w-32 px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500 btn">
+      Limpiar
+    </button>
+
+    <button type="submit"
+            class="w-full sm:w-32 px-4 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn">
+      Publicar
+    </button>
+
+    <button type="button"
+            onclick="window.location.href='../Paginas/gestionProyectos.html';"
+            class="w-full sm:w-32 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 btn">
+      Cancelar
+    </button>
+
+  </div>
+  </div>
+
+</form>
+
 
     <!-- Sección de videos publicados -->
     <section class="mt-10">
@@ -173,7 +191,7 @@
   youtubeInput.addEventListener('input', () => {
     const id = youtubeInput.value.trim();
     preview.innerHTML = id
-    ? `<div class="flex justify-center"><iframe class="w-[70%] h-60 rounded-lg" src="https://www.youtube.com/embed/${id}" allowfullscreen></iframe></div>`
+    ? `<div class="flex justify-center"><iframe class=" w-60 h-50 rounded-lg" src="https://www.youtube.com/embed/${id}" allowfullscreen></iframe></div>`
       : '';
   });
 
@@ -184,18 +202,17 @@
     const titulo = document.getElementById('titulo').value.trim();
     const descripcion = document.getElementById('descripcion').value.trim();
     const youtubeID = youtubeInput.value.trim();
-    const estado = document.getElementById('estado').value;
     const tipo = document.getElementById('tipo').value;
 
     if (!titulo || !youtubeID) return alert("Por favor completa los campos requeridos.");
 
     if (editIndex !== null) {
       // 🔹 Actualizar video existente
-      videos[editIndex] = { titulo, descripcion, youtubeID, estado, tipo };
+      videos[editIndex] = { titulo, descripcion, youtubeID, tipo };
       editIndex = null;
     } else {
       // 🔹 Agregar nuevo video
-      videos.push({ titulo, descripcion, youtubeID, estado, tipo });
+      videos.push({ titulo, descripcion, youtubeID, tipo });
     }
 
     renderVideos();
@@ -217,7 +234,6 @@
           <div class="p-4">
             <h3 class="text-lg font-semibold text-gray-800">${v.titulo} ${live}</h3>
             <p class="text-gray-600 text-sm">${v.descripcion}</p>
-            <p class="text-gray-500 text-xs mt-1">Estado: ${v.estado}</p>
 
             <!-- Botones de acción -->
             <div class="flex justify-center gap-3 mt-3">
@@ -246,12 +262,11 @@
     document.getElementById('titulo').value = v.titulo;
     document.getElementById('descripcion').value = v.descripcion;
     document.getElementById('youtubeID').value = v.youtubeID;
-    document.getElementById('estado').value = v.estado;
     document.getElementById('tipo').value = v.tipo;
     editIndex = index;
 
     // Mostrar vista previa
-    preview.innerHTML = `<div class="flex justify-center"><iframe class="w-1/2 h-60 rounded-lg" src="https://www.youtube.com/embed/${v.youtubeID}" allowfullscreen></iframe></div>`;
+    preview.innerHTML = `<div class="flex justify-center"><iframe class="w-60 h-50 rounded-lg" src="https://www.youtube.com/embed/${v.youtubeID}" allowfullscreen></iframe></div>`;
 
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }
